<resources>
    <string name="app_name">Countries</string>
    <string name="errorTV">An error has occured while loading the data</string>
    <string name="country">Country</string>
    <string name="capital">Capital</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_to_favorites">Go to favorites</string>
    <string name="numeric_code">Numeric Code</string>
    <string name="demonym">Demonym</string>
    <string name="region">Region</string>
    <string name="subregion">Subregion</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="flag">flag</string>
    <string name="delete_from_favorites">Delete from favorites</string>
    <string name="empty_list_or_failure_conexion">Empty list or failure conexion</string>
</resources>