<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:background="#414141"
    android:layout_margin="5dp"
    android:layout_marginVertical="8dp"

    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="8dp"
        android:contentDescription="@string/flag" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_weight="2">

        <TextView
            android:id="@+id/countryName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="12dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="#FFEB3B"
            android:text="@string/country" />

        <TextView
            android:id="@+id/capitalName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="12dp"
            android:textSize="14sp"
            android:textStyle="italic"
            android:textColor="#C8E6C9"
            android:text="@string/capital" />

    </LinearLayout>
</LinearLayout>