<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#757575"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/detailImageView"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:padding="8dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="#FFEB3B"
                android:text="@string/country" />

            <TextView
                android:id="@+id/detailCountryName"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:textSize="14sp"
                android:textStyle="italic"
                android:textColor="#C8E6C9"
                android:text="" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="#FFEB3B"
                android:text="@string/capital" />

            <TextView
                android:id="@+id/detailCapitalName"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:textSize="14sp"
                android:textStyle="italic"
                android:textColor="#C8E6C9"
                android:text="" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="#FFEB3B"
                android:text="@string/numeric_code" />

            <TextView
                android:id="@+id/detailNumericCode"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:textSize="14sp"
                android:textStyle="italic"
                android:textColor="#C8E6C9"
                android:text="" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="#FFEB3B"
                android:text="@string/demonym" />

            <TextView
                android:id="@+id/detailDemonym"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:textSize="14sp"
                android:textStyle="italic"
                android:textColor="#C8E6C9"
                android:text="" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="#FFEB3B"
                android:text="@string/region" />

            <TextView
                android:id="@+id/detailRegion"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:textSize="14sp"
                android:textStyle="italic"
                android:textColor="#C8E6C9"
                android:text="" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="#FFEB3B"
                android:text="@string/subregion" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/Widget.MaterialComponents.TextView"
                android:id="@+id/detailSubregion"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:textSize="14sp"
                android:textStyle="italic"
                android:textColor="#C8E6C9"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Subregion" />


        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:id="@+id/btnAddToFavorites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:padding="12dp"
        app:strokeColor="#212121"
        app:strokeWidth="2dp"
        app:cornerRadius="12dp"
        app:elevation="10dp"
        app:rippleColor="#F44336"
        android:textColor="#212121"
        android:textStyle="bold"
        android:textSize="14sp"
        android:text="@string/add_to_favorites"/>

</LinearLayout>